--- a/.github/workflows/OWRT-ALL.yml
+++ b/.github/workflows/OWRT-ALL.yml
@@ -44,9 +44,9 @@ jobs:
       #默认主题
       WRT_THEME: aurora
       #默认主机名
-      WRT_NAME: Go_WRT
+      WRT_NAME: G_WRT
       #默认WIFI名称
-      WRT_SSID: Go_WRT
+      WRT_SSID: G_WRT
       #默认WIFI密码
       WRT_WORD: 12345678
       #默认地址
