--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -44,7 +44,7 @@ jobs:
       #默认主题
       WRT_THEME: aurora
       #默认主机名
-      WRT_NAME: Go_WRT
+      WRT_NAME: G_WRT
       #默认WIFI名称
       WRT_SSID: Moto_5G
       #默认WIFI密码
