--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       #max-parallel: 3#, IPQ60XX-WIFI-NO
       matrix:
-        CONFIG: [IPQ60XX-WIFI-YES]
+        CONFIG: [IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO]
         SOURCE: [VIKINGYFY/immortalwrt]
         BRANCH: [main]
 
