--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       #max-parallel: 3#IPQ60XX-WIFI-YES, IPQ60XX-WIFI-NO
       matrix:
-        CONFIG: [IPQ60XX-WIFI-NO]
+        CONFIG: [IPQ60XX-WIFI-YES]
         SOURCE: [VIKINGYFY/immortalwrt]
         BRANCH: [main]
 
@@ -50,7 +50,7 @@ jobs:
       #默认WIFI密码
       WRT_WORD: 11112222
       #默认地址
-      WRT_IP: 172.16.8.1
+      WRT_IP: 172.16.9.1
       #默认密码，仅作提示，修改无用
       WRT_PW: MTCA
       #源码链接
